--- a/.github/workflows/unzip.yml
+++ b/.github/workflows/unzip.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     paths:
-      - hwood-complete-cms.zip
+      - hwood-fixed-deploy.zip
 
 permissions:
   contents: write
